Fixed Index page 1. Advantages content is centered vertically 2. Removed margin between courses slider and advantages block 3. Fixed features block. Removed margins and paddings. 4. Fixed horizontal scrolling

--- a/Programmania/wwwroot/css/Index.css
+++ b/Programmania/wwwroot/css/Index.css
@@ -191,6 +191,7 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: space-around;
     min-height: 400px;
     background-color: #f8f8f8;
+    align-items: center;
 }
 
 .advantages__image{
@@ -230,7 +231,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .features__list{
-    width: 400px;
+    max-width: 400px;
     margin: 0 auto;
     margin-top: 30px;
 }
@@ -238,7 +239,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .features__list ul {
     list-style: none;
-    font-size: 3vh;
+    font-size: 1.5em    ;
     font-weight: 200;
 }
 
@@ -256,8 +257,8 @@ h1, h2, h3, h4, h5, h6 {
     z-index: 1;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: auto;
     background-color: rgba(0,0,0,.4);
 }
@@ -274,7 +275,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 3vh;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     animation-name: animatetop;
-    animation-duration: 0.4s
+    animation-duration: 0.4s;
 }
 
 .error {
@@ -432,16 +433,14 @@ h1, h2, h3, h4, h5, h6 {
         margin-top: 20px;
     }
 
-    .advantages{
-        margin-top: 150px;      
-    }
-
     .advantages__image {
         width: 100%;
     }
-    .features__list {
-        width: 200px;
+
+    .features{
+        padding: 0;
     }
+    
 
     .features__list li {
         padding: 0 0 0 50px;
